# actix-web2

./: .travis.yml  Cargo.toml  README.md
examples/: basic.rs
src/: app.rs  de.rs  extractor.rs  filter.rs  framed_app.rs  framed_handler.rs  framed_route.rs  fs.rs  handler.rs  helpers.rs  lib.rs  param.rs  pattern.rs  pred.rs  request.rs  resource.rs  responder.rs  response.rs  route.rs  router.rs  service.rs  state.rs  test.rs  url.rs  with.rs
src/middleware/: compress.rs  defaultheaders.rs  errhandlers.rs  logger.rs  mod.rs
tests/: test_app.rs  test_server.rs
