[package]
name = "actix-web2"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://actix.rs/api/actix-web/stable/actix_web/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "actix/actix-web2", branch = "master" }
codecov = { repository = "actix/actix-web2", branch = "master", service = "github" }

[lib]
name = "actix_web2"
path = "src/lib.rs"

[dependencies]
actix-codec = "0.1.0"
actix-service = "0.2.1"
actix-server = "0.2.1"
actix-utils = "0.2.1"
actix-rt = "0.1.0"
actix-http = { git = "https://github.com/actix/actix-http.git" }
actix-router = { git = "https://github.com/actix/actix-net.git" }
#actix-http = { path = "../actix-http" }

bytes = "0.4"
futures = "0.1"
derive_more = "0.14"
log = "0.4"
mime = "0.3"
serde = "1.0"
serde_json = "1.0"
encoding = "0.2"
serde_urlencoded = "^0.5.3"

[dev-dependencies]
env_logger = "0.5"
serde_derive = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
